feat: F56 Metrics Hardening + F57 Worklog Sync + F58 Board Semantic Search
F56: Metrics hardening — throughput periods, velocity improvements,
retrospective timeline fixes, team metrics service refactoring.

F57: Jira worklog sync — WorklogImportService, IssueWorklogEntity,
V48 migration, per-day timeline in retrospective view.

F58: Semantic search on Board — pgvector integration with board
filtering. GET /api/board/search endpoint, debounced frontend search
with AI/TXT badge, 8 unit tests. Semantic search with substring
fallback for graceful degradation.

Also: ObservabilityMetrics, TenantAwareAsyncConfig, ForecastSnapshotService
tenant-awareness, SchemaBasedConnectionProvider logging, QA reports.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>